name:                frp-refactored-examples
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Christina Zeller
maintainer:          chriz@keera.co.uk
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     FRPrefactoredSec3,
                       FRPrefactoredSec4
  build-depends:       base >=4.9,
                       transformers,
                       transformers-base,
                       dunai
  default-language:    Haskell2010
